--- a/2.算法与数据结构/复习：数据结构-数组题.md
+++ b/2.算法与数据结构/复习：数据结构-数组题.md
@@ -213,3 +213,102 @@ class Solution {
 这个矩阵有两层环形，外层环形包含元素1, 2, 3, 4, 5, 6, 7, 8，内层环形（一个点）包含元素9。
 
 所以，当螺旋层级小于等于n / 2时，我们就继续进行螺旋填充，直到所有的环形层级都被填充完毕。
+
+## 移除元素
+
+[力扣题目 27. 移除元素](https://leetcode.cn/problems/remove-element/)
+
+给你一个数组 `nums` 和一个值 `val`，你需要 **[原地](https://baike.baidu.com/item/%E5%8E%9F%E5%9C%B0%E7%AE%97%E6%B3%95)** 移除所有数值等于 `val` 的元素。元素的顺序可能发生改变。然后返回 `nums` 中与 `val` 不同的元素的数量。
+
+假设 `nums` 中不等于 `val` 的元素数量为 `k`，要通过此题，您需要执行以下操作：
+
+- 更改 `nums` 数组，使 `nums` 的前 `k` 个元素包含不等于 `val` 的元素。`nums` 的其余元素和 `nums` 的大小并不重要。
+- 返回 `k`。
+
+**示例 1：**
+
+>**输入：** nums = [3,2,2,3], val = 3
+>**输出：** 2, nums = [2,2,_,_]
+>**解释：** 你的函数函数应该返回 k = 2, 并且 nums 中的前两个元素均为 2。
+>你在返回的 k 个元素之外留下了什么并不重要（因此它们并不计入评测）。
+
+**示例 2：**
+
+>**输入：** nums = [0,1,2,2,3,0,4,2], val = 2
+>**输出：** 5, nums = [0,1,4,0,3,_,_,]
+>**解释：** 你的函数应该返回 k = 5，并且 nums 中的前五个元素为 0,0,1,3,4。
+>注意这五个元素可以任意顺序返回。
+>你在返回的 k 个元素之外留下了什么并不重要（因此它们并不计入评测）。
+
+**提示：**
+
+- `0 <= nums.length <= 100`
+- `0 <= nums[i] <= 50`
+- `0 <= val <= 100`
+
+### 思路
+
+这一道题呢，我使用的方法有两种：
+- 暴力法
+- 双指针法（快慢指针）
+
+#### 暴力解法（不推荐）
+
+直接两层for循环，外层循环遍历数组元素，内层循环更新数组元素。如下图：
+
+![[移除元素暴力.png]]
+
+```C++
+C++:
+
+class Solution {
+public:
+    int removeElement(vector<int>& nums, int val) {
+        int currentSize = nums.size();  // 当前数组的大小
+        for (int i = 0; i < currentSize; i++) {
+            if (nums[i] == val) { // 如果当前元素是需要移除的元素
+                // 内部循环：将数组中后续的所有元素向前移动一位
+                for (int j = i + 1; j < currentSize; j++) {
+                    nums[j - 1] = nums[j]; // 将位置j的元素移动到位置j-1
+                }
+                i--; // 因为当前位置i的元素已经被移除，需将i回退一位，以检查新的当前元素
+                currentSize--; // 数组大小减一，因移除一个元素
+            }
+        }
+        return currentSize; // 返回移除指定元素后的数组大小
+    }
+};
+// 时间复杂度：O(n^2)
+// 空间复杂度：O(1)
+```
+
+#### 双指针法
+
+可以定义一个快指针和一个慢指针在一个for循环下完成两个for循环所做的事。
+
+1. 快指针：负责遍历整个数组。目的是找到新的数组的元素，即不包含目标元素 `val` 的所有元素。
+2. 慢指针：指向要更新的位置
+
+如下图：
+
+![[移除元素快慢指针.png]]
+
+```C++
+C++:
+
+class Solution {
+public:
+    int removeElement(std::vector<int>& nums, int val) {
+        int i = 0; // 慢指针
+        for (int j = 0; j < nums.size(); j++) { // 快指针
+            if (nums[j] != val) {
+                nums[i] = nums[j];
+                i++;
+            }
+        }
+        return i;
+    }
+};
+// 时间复杂度：O(n)
+// 空间复杂度：O(1)
+```
