更新更多东西

--- a/学习笔记/日常/项目面试题2.md
+++ b/学习笔记/日常/项目面试题2.md
@@ -1,3 +1,15 @@
+---
+title: 项目面试题2
+slug: xiang-mu-mian-shi-ti-2
+cover: ""
+categories: []
+tags: []
+halo:
+  site: https://blog.kangyaocoding.top
+  name: 4dc3f94b-be1c-4c07-8e0b-1a7937e0872e
+  publish: false
+---
+[工程设计](https://articles.zsxq.com/id_cnp0sxnfmpww.html)
 ### 1. 你的这个项目的背景和需求来自哪里？
 
 面试官你好。我参与这个项目的主要目标是寻找一个能够真正提升技术实践能力的平台。目前，AI 对话服务在互联网的热门趋势，例如ChatGPT、通义以及文心一言等多样化的模型不断涌现。所以，我想将这些不同的模型整合在一起，以便于使用。基于此，我进行了项目的设计、开发、上线、运维等一系列动作，提高了我的编程能力和技术思维。并且在项目中我所运用的微信对接、登录鉴权、异步接口、下单支付、异步发货、账户管理等应用场景可以运用到其它任何一个项目中使用。所以我选择开发这样一个项目,也为我以后在工作中解决实际场问题，打下了牢固的基础。
@@ -48,7 +60,7 @@
 
 下单支付场景在整个项目中也是一块非常核心的流程。首先系统设计采用了 DDD 架构，对商品下单按照业务流程拆解出来了单独的领域模块。在设计实现上，以购物车为下单实体对象，出参为支付单实体对象，保存的是订单的聚合信息。
 
-由于下单是一个较为复杂的流程，所以在编码实现上采用了模板模式，义出下单的标准过程。商品下单的流程需要先查询是否存在 `已下单未支付` 和 `已下单但未存在支付单`的订单，对于这两种订单分别进行处理。对于已下单未支付，在有效期内为关单的，直接返回给用户直接支付。对于已下单但未存在支付单的，则调用微信支付创建订单，保存库表记录后返回给客户端用户进行支付。此外的流程则直接执行购物车的商品 ID 查询、组装聚合订单数据、创建支付单、保存库表记录和返回给用户。在用户支付完成后，接收支付回调信息，发送 Google Guava 事件信息，由系统中 tigger 模块下的监听处理支付成功消息的方法执行，完成商品订单发货处理。
+由于下单是一个较为复杂的流程，所以在编码实现上采用了模板模式，义出下单的标准过程。商品下单的流程需要先查询是否存在 `已下单未支付` 和 `已下单但未存在支付单`的订单，对于这两种订单分别进行处理。对于已下单未支付，在有效期内未关单的，直接返回给用户直接支付。对于已下单但未存在支付单的，则调用微信支付创建订单，保存库表记录后返回给客户端用户进行支付。此外的流程则直接执行购物车的商品 ID 查询、组装聚合订单数据、创建支付单、保存库表记录和返回给用户。在用户支付完成后，接收支付回调信息，发送 Google Guava 事件信息，由系统中 tigger 模块下的监听处理支付成功消息的方法执行，完成商品订单发货处理。
 
 然后在处理接收回调消息的时候可能会失败。这个时候则由定时任务扫描库表订单超过15分钟的未支付的订单，查询支付平台是否已经支付，如果支付了，则发送事件消息走补货的流程。另外如果超过15分钟以上未支付则进行本地关单处理，不对平台进行关单（因为平台有自己的关单时间），这样可以让用户体验更加舒服。如果用户超时后再进行支付，也可以走补货的流程。（但如果用户刷新界面，则获取创建新的支付单。）
 
