--- a/学习笔记/日常/自我介绍.md
+++ b/学习笔记/日常/自我介绍.md
@@ -1,16 +1,45 @@
 
 ---
 
-面试官号，我叫XXX，是一名数据科学与大数据技术专业的本科生，目前就读于某知名科技大学，预计2025年毕业。我对后端开发充满热情，并一直致力于提升自己的技术能力和项目经验。在校期间，我的综合测评成绩位列专业前5%，多次获得国家励志奖学金和校级奖项。
+面试官好，我叫XXX，是一名数据科学与大数据技术专业的本科生，目前就读于某知名科技大学，预计2025年毕业。我对后端开发充满热情，并一直致力于提升自己的技术能力和项目经验。在校期间，我的综合测评成绩位列专业前5%，多次获得国家励志奖学金和校级奖项。
 
 在技术方面，我熟练掌握Java编程语言及相关技术栈，包括Spring MVC、Spring Boot和MyBatis等框架。此外，我熟悉使用MySQL，熟悉索引、事务和日志等功能。同时，我还熟悉Redis，能够解决缓存穿透、缓存击穿及高并发场景下的数据一致性问题。我也了解RocketMQ和Kafka等分布式消息中间件的使用。
 
-我参与了多个后端开发项目。例如，在商铺探索服务平台项目中，我负责后端核心功能的开发，成功实现了商户信息检索、抢购优惠券、以及用户互动功能。通过使用Redis和MySQL相结合的方式，我解决了多种缓存问题，并确保了在高并发情况下的系统稳定性和数据一致性。
+我参与了多个后端开发项目。例如，在商铺探索服务平台项目中，我负责后端核心功能的开发，成功实现了商户信息检索、抢购优惠券、以及用户互动功能。通过使用Redis和MySQL相结合的方式，确保了在高并发情况下的系统稳定性和数据一致性。
 
-此外，我还主导了一个基于OpenAI技术的全栈开发项目，采用微服务架构设计，成功实现了OpenAI大模型的对接、支付接口集成，以及前后端的完整开发和部署。这个项目不仅让我深入理解了领域驱动设计（DDD）的原理，也提升了我在编码思维和设计模式方面的能力。
+此外，我还主导了一个基于OpenAI技术的全栈开发项目，采用微服务架构设计，成功实现了OpenAI大模型的对接、支付接口集成，以及前后端的完整开发和部署。这个项目不仅让我理解了领域驱动设计（DDD）的原理，也提升了我在编码思维和设计模式方面的能力。
 
 我热衷于学习新技术，并在网络平台上积极参与技术讨论和分享经验。我有自己的技术博客，定期记录和分享编程中的心得与技巧。同时，我也非常注重开发文档的阅读和实践，努力在每个项目中遵循最佳的开发规范。
 
 我非常期待能够在后端开发领域继续深耕，并希望通过我的技术能力和项目经验，为贵公司做出贡献。谢谢！
 
 ---
+
+
+
+熟悉常见的数据结构和算法，如栈、队列、哈希表、二分查找、快速排序等。 
+熟练掌握 Java 基础，包括集合、I/O 流、异常、反射等相关知识，并阅读过如 ArrayList、HashMap 等源码。
+熟悉 Java 并发编程，掌握 JUC 中常用的工具类，如 Synchronized、ReentrantLock。 
+熟练使用 Spring MVC、Spring Boot、Mybatis 等常用框架，并了解 IOC（控制反转）和 AOP（面向切面编程）原理。 
+熟悉使用 MySQL ，了解索引、事务、日志、锁等机制，并了解分库表和读写分离策略。 
+熟悉使用 Redis ，了解其数据结构、线程模型、持久化机制，并熟悉缓存穿透、击穿和雪崩等解决方案。 
+了解 RocketMQ、RabbitMQ、Kafka 等分布式系统消息队列中间件。 
+熟悉使用 Retrofit2 和 OkHttp3 进行 API 交互，能够与第三方服务进行数据通信。
+熟悉使用 Prometheus 和 Grafana 进行系统监控和日志管理。 
+具备支付系统集成经验，能够结合文档自主整合蓝兔支付SDK。 
+掌握 Linux 常用命令，例如 netstat、grep、tar、find、vim 等。 
+熟悉使用 Git、Maven、IDEA、Docker 等开发工具。
+
+
+个人技术博客：https://blog.kangyaocoding.top。 
+擅长利用资源：我习惯利用国内外技术博客、人工智能等平台来解决编程中遇到的难题。 
+注重文档阅读：我习惯阅读相关开发文档，并在实践中遵循最佳的开发规范和标准。 
+热爱网络学习：我热衷参与网络课程和撰写博客文章，经常在 bilibili 、Github 等学习平台上深化各种技术及其框架的知识。
+
+
+面试官您好，我叫XXX，是一名数据科学与大数据技术专业的学生，目前就读于某知名科技大学，预计2025年毕业。我对后端开发充满热情，并一直致力于提升自己的技术能力和项目经验。
+
+在大学期间，我通过自己的努力获得了各种奖学金，并参与过多次校内外竞赛，都取得了不错的成绩。我熟悉使用各类开发技术及其相关框架，积累了许多开发经验。同时，我对技术有着浓厚的兴趣，长期深入学习各种技术文档，吸收设计精髓。尤其是在学习领域驱动DDD设计思想后，我开发了一款内部可用的OpenAI应用服务项目，并将其部署上线，使我在技术和个人成长方面都得到了极大的提升。
+
+通过持续不断的学习和实践，并在自己博客上记录学习心得和技巧，我已经建立了良好的技术基础和开发习惯未来，我希望能够在贵公司继续发挥所学，进一步拓展我的技能，为团队贡献力量。同时，我也期待在工作中继续学习和成长，为公司的发展助力。谢谢！
+
