--- a/学习笔记/日常/面试题整合.md
+++ b/学习笔记/日常/面试题整合.md
@@ -110,6 +110,30 @@
 作者：北雷村卖炒饭  
 链接：[https://www.nowcoder.com/users/history](https://www.nowcoder.com/users/history)  
 来源：牛客网
+### 哔哩哔哩一面
+
+- MySQL  
+  - 为什么用b+树不用二叉树  
+  - 平衡二叉树查找时间也是logn，为什么b+树要比二叉树在MySQL的应用上要好  
+  - 有没有了解MVCC  
+  -  MySQL 的有一个主键用连续递增的一个数字和一个随机数有什么区别  
+  - mysql优化，explain字段解释  
+  - 二级索引的子节点存的具体数据是什么   
+- Redis  
+  - Redis能不能同时执行多条命令（问单线程的点）  
+  - Unlink 和 delete区别（这真不会）  
+  - 从节点复制主节点的流程  
+  - 混合持久化  
+  - 有用过其他中间件吗比如消息队列  
+- 网络  
+  - 项目有没有用什么二进制协议  
+  - 解释HTTP请求格式（忘了。）  
+- 手撕  
+  - 求子数组最大乘积，简单dp想复杂了，最后没敲完，整场面试最难受的地方。  
+  
+作者：暮江  
+链接：[https://www.nowcoder.com/users/history](https://www.nowcoder.com/users/history)  
+来源：牛客网
 
 ### 京东二面
 
