--- a/6. 面试/后端开发面试题手写笔记.md
+++ b/6. 面试/后端开发面试题手写笔记.md
@@ -210,7 +210,7 @@ public class Main {
 3. 不剥夺条件：线程持有资源未释放时，其他线程不能强行剥夺（独占）。
 4. 循环等待条件：多个线程之间形成一条头尾相连的循环等待关系（A->B->C->A）。
 
-### 如何检测死锁？
+### 如何检测Java进程死锁？
 
 1. 使用 JDK 自带工具：`jmp`、`jstack`等命令查看虚拟机线程和堆内存使用情况。一般出现线程的或会有`deadlock`的关键字样。
 2. 使用`top`、`df`、`free`等命令查看CPU或内存使用情况，死锁时，通常会占用比较高。
@@ -367,6 +367,8 @@ public T get() {
 }
 ```
 
+**拓展知识**：
+- 全链路追踪 TransmittableThreadLocal。
 ### ThreadLocal内存泄露问题
 
 **描述**：
@@ -653,3 +655,119 @@ public class SecondAspect implements Ordered {
 
 ## 分布式知识
 
+## Docker 知识
+
+### Docker基础概念
+
+> Docker 对进程进行封装隔离，属于操作系统层面的虚拟化技术。主要解决了“这段代码在我机器上没问题啊”的问题。
+
+**描述**：
+
+1. 包含了应用程序及其所有依赖项，确保在任何环境都可以以相同的方式运行。
+2. 对运输方式、存储方式、API 接口进行了标准化。
+3. 每个 Docker 容器都在自己的隔离箱运行，与宿主机和其他容器隔离。
+
+#### 镜像（Image）：
+
+1. Image 是不可变的文件，包含了构建容器的所有信息（应用程序代码、依赖项、操作系统）。
+2. 通过 Dockerfile 文件定义，通过镜像仓库进行发布和拉取。
+3. 构建镜像时，一层一层的构建，前一层是后一层的基础。每一层建完就不会发生改变，后一层的任何改变只发生在本层。（比如，删除前一层文件的操作，不是真的删除前一层的文件，而是仅在当前层标记为该文件已删除。）
+
+#### 容器（Container）
+
+**描述**：
+
+1. 容器是镜像运行的实体，可以创建、启动、停止、删除、暂停等。
+2. 实质是进程，并且拥有一个属于自己的独立的命名空间。也采用分层存储。
+
+**注意**：
+
+- 容器不应该向其存储层写入任何数据（存储层要保证无状态化的）。
+- 所有文件的写入操作应该使用数据卷（Volume）、或绑定宿主目录。
+- 使用数据卷后，容器可以随意删除、重新 run ，数据却不会丢失。
+
+#### 仓库（Repository）
+
+**描述**：
+
+1. 用来集中存放镜像文件（Image）的地方，类似于代码库。
+2. 一个仓库会包含不同的镜像版本，标签用于对应该软件的各个版本。
+
+### Docker Compose基础概念
+
+> 开发者可以使用 YAML 文件来配置应用的所有服务，然后只需一个简单的命令即可创建和启动所有服务。
+
+**描述**：
+
+1. 多容器管理：允许用户在一个 yml 文件定义多个容器。
+2. 服务编排：配置容器之间的网络和依赖关系。
+3. 一键部署：通过`docker-compose up -d`和`docker-compose down`可以一键启动/停止。
+
+**基本文件结构**：
+
+1. 版本（version）
+2. 服务（services）：
+	- 镜像（Image）
+	- 命令（command）
+	- 端口（port）
+	- 依赖（depends_on）
+	- 环境变量（environment）
+	- 重启策略（restart）
+	- 服务卷（volumes）
+	- 构建（build）
+3. 网络（network）
+4. 卷（volumes）
+
+#### docke-compose.yml 文件示例
+
+```YML
+version: "3.9" # 使用的 Docker Compose 版本
+
+services: # 定义多个服务
+  app: # 第一个服务的名称
+    image: your-app-image:latest # 使用的镜像，或定义一个构建目录
+    build: # 如果需要从源码构建镜像，可以使用 build 选项
+      context: ./app # 指定 Dockerfile 所在目录
+      dockerfile: Dockerfile
+    command: ["python", "app.py"] # 覆盖镜像中默认的命令，执行自定义命令
+    environment: # 定义环境变量
+      - ENV=production
+      - DEBUG=false
+    volumes: # 挂载数据卷，将宿主机目录映射到容器内部
+      - ./app/data:/app/data
+    networks: # 指定容器所属网络
+      - app_network
+    ports: # 映射端口，宿主机端口映射到容器端口
+      - "8080:8080"
+    depends_on: # 服务依赖，确保其他服务启动前运行此服务
+      - db
+    restart: always # 容器重启策略， always 表示容器异常退出时会自动重启
+
+  db: # 第二个服务 (数据库服务)
+    image: postgres:13 # 使用 PostgreSQL 13 镜像
+    environment: # 设置环境变量，如数据库密码
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_DB=mydb
+    volumes: # 持久化存储数据库数据
+      - db_data:/var/lib/postgresql/data
+    networks: # 定义服务的网络
+      - app_network
+    ports: # 暴露数据库端口，供外部访问
+      - "5432:5432"
+    restart: unless-stopped # 重启策略，除非手动停止，否则会在异常情况下重启
+
+  redis: # 第三个服务 (缓存服务)
+    image: redis:alpine # 使用 Redis 的轻量级 alpine 版本
+    ports:
+      - "6379:6379" # 暴露 Redis 默认端口
+    networks:
+      - app_network
+    restart: unless-stopped
+
+volumes: # 定义持久化数据卷
+  db_data: # 用于存储数据库数据的卷
+
+networks: # 定义网络
+  app_network: # 自定义网络，用于连接多个服务
+```
