更新面经，更新项目问题

--- a/6. 面试/后端开发面试题手写笔记.md
+++ b/6. 面试/后端开发面试题手写笔记.md
@@ -32,8 +32,8 @@
 
 1. 线程私有的，生命周期与线程相同。。
 2. 生命周期和线程相同。
-3. 描述 Java 方法执行的内存模型。
-4. 每个方法执行的同时都会创建一个栈帧，存储局部变量表、操作数栈、动态链接、方法出口等信息。
+3. 描述 **Java 方法执行的内存模型**。
+4. **每个方法执行的同时都会创建一个栈帧，存储局部变量表、操作数栈、动态链接、方法出口等信息。**
 
 #### 本地方法栈
 
@@ -47,7 +47,7 @@
 **描述**：
 
 1. 线程共享的，生命周期与虚拟机相同。
-2. 唯一目的就是用于存放对象的实例，几乎所有的对象实例都在这里分配内存。
+2. 唯一目的就是用于**存放对象的实例**，几乎所有的对象实例都在这里分配内存。
 3. 垃圾回收器管理的主要区域就是这里。
 
 #### 方法区
@@ -57,14 +57,14 @@
 **描述**：
 
 1. 线程共享的，生命周期与虚拟机相同。
-2. 存储已被虚拟机加载的类信息、常量、静态变量、即时编译器编译后的代码等数据。
+2. **存储已被虚拟机加载的类信息、常量、静态变量、即时编译器编译后的代码**等数据。
 
 #### 运行时常量池
 
 **描述**：
 
 1. 方法区的一部分。
-2. Class 文件中除了有类的版本号、字段、方法、接口等描述信息外，还有一项常量池，用于存放编译器生成的各种字面量和符号引用，会在类加载后进入方法区的运行时常量池中存放。
+2. Class 文件中除了有类的版本号、字段、方法、接口等描述信息外，还有一项常量池，**用于存放编译器生成的各种字面量和符号引用，会在类加载后进入方法区的运行时常量池中存放**。
 3. 具有动态性，运行期间产生的新常量也会被加入到这里。
 
 #### 字符串常量池
