--- a/学习笔记/日常/项目面试题2.md
+++ b/学习笔记/日常/项目面试题2.md
@@ -52,7 +52,7 @@ halo:
 
 ### 7. 因为你的项目是前后端分离的，接口跨域怎么做的？
 
-首先我们知道，Web 跨域（Cross-Origin Resource Sharing，CORS）是一种安全机制，用于限制一个域下的文档或者脚本如何与另一个源的资源进行交互，这是一个浏览器强制执行的安全特性，主要为了防止而已网站读取或修改另一个网站的数据。
+首先我们知道，Web 跨域（Cross-Origin Resource Sharing，CORS）是一种安全机制，用于限制一个域下的文档或者脚本如何与另一个源的资源进行交互，这是一个浏览器强制执行的安全特性，主要为了防止恶意网站读取或修改另一个网站的数据。
 
 所以我在我的前后端分离项目中，通过配置 @CrossOrigin 注解来解决跨域问题。在开发阶段使用 `Access-Control-Allow-Origin: *`，上线后使用自己的域名来替代。
 
@@ -60,13 +60,25 @@ halo:
 
 下单支付场景在整个项目中也是一块非常核心的流程。首先系统设计采用了 DDD 架构，对商品下单按照业务流程拆解出来了单独的领域模块。在设计实现上，以购物车为下单实体对象，出参为支付单实体对象，保存的是订单的聚合信息。
 
-由于下单是一个较为复杂的流程，所以在编码实现上采用了模板模式，义出下单的标准过程。商品下单的流程需要先查询是否存在 `已下单未支付` 和 `已下单但未存在支付单`的订单，对于这两种订单分别进行处理。对于已下单未支付，在有效期内未关单的，直接返回给用户直接支付。对于已下单但未存在支付单的，则调用微信支付创建订单，保存库表记录后返回给客户端用户进行支付。此外的流程则直接执行购物车的商品 ID 查询、组装聚合订单数据、创建支付单、保存库表记录和返回给用户。在用户支付完成后，接收支付回调信息，发送 Google Guava 事件信息，由系统中 tigger 模块下的监听处理支付成功消息的方法执行，完成商品订单发货处理。
+由于下单是一个较为复杂的流程，所以在编码实现上采用了模板模式，定义出下单的标准过程。商品下单的流程需要先查询是否存在 `已下单未支付` 和 `已下单但未存在支付单`的订单，对于这两种订单分别进行处理。对于已下单未支付，在有效期内未关单的，直接返回给用户直接支付。对于已下单但未存在支付单的，则调用微信支付创建订单，保存库表记录后返回给客户端用户进行支付。此外的流程则直接执行购物车的商品 ID 查询、组装聚合订单数据、创建支付单、保存库表记录和返回给用户。在用户支付完成后，接收支付回调信息，发送 Google Guava 事件信息，由系统中 tigger 模块下的监听处理支付成功消息的方法执行，完成商品订单发货处理。
 
 然后在处理接收回调消息的时候可能会失败。这个时候则由定时任务扫描库表订单超过15分钟的未支付的订单，查询支付平台是否已经支付，如果支付了，则发送事件消息走补货的流程。另外如果超过15分钟以上未支付则进行本地关单处理，不对平台进行关单（因为平台有自己的关单时间），这样可以让用户体验更加舒服。如果用户超时后再进行支付，也可以走补货的流程。（但如果用户刷新界面，则获取创建新的支付单。）
 
+**补充**：怎么实现的定时任务？如果同时有很多任务同一时间待处理怎么办？
+
+**答**：在我的项目中，我使用的是 Spring 框架提供的 @Scheduled 注解来处理定时任务。它可以通过 `fixedRate`、`fixedDelay`、`cron`表达式等方式来灵活配置任务的执行周期。相比于 Timer 或者 ScheduledExecutorService，使用它更加方便，因为它不要显示的创建和管理线程池，Spring 会自动处理任务的调度和线程管理。
+
+**补充**：如果存在多个定时任务的同时等待执行，怎么处理？
+
+**答**：
+1.我们可以在配置文件中配置`TaskScheduler`或使用 `@EnableScheduling`与自定义的`ThreadPoolTaskScheduler`，保证多个定时任务并发执行不会阻塞其他任务。
+2.根据业务要求我们可以设置优先级，例如采用`PriorityBlockingQueue`来存储任务，根据任务的优先级来依次执行。
+3.如果业务容忍一定的延迟执行的话，可以采用异步任务调度，可以通过消息队列（RabbitMQ、Kafka等）来调度任务，让任务以事件驱动的方式执行，而不是同步处理所有任务。
+
+
 ### 9. 你的订单表也是一个频繁使用的表，那么库表有哪些核心字段，索引有哪些？
 
-核心的字段： 用户ID、商品ID、商品名称、商品额度、可用模型、订单ID、下单时间、订单状态、订单金额、支付方式、支付链接、支付金额、交易单号、支付状态、支付时间。其中，对表中的订单ID和用户ID作了唯一索引。对下单时间、订单状态、支付状态做了符合索引，如统计特定时间段内的订单状态和支付情况。
+核心的字段： 用户ID、商品ID、商品名称、商品额度、可用模型、订单ID、下单时间、订单状态、订单金额、支付方式、支付链接、支付金额、交易单号、支付状态、支付时间。其中，对表中的订单ID和用户ID作了唯一索引。对下单时间、订单状态、支付状态做了复合索引，如统计特定时间段内的订单状态和支付情况。
 
 ### 10. 我看到OpenAI的体验，都是渐进式展示的，这块后端使用了什么接口形式？
 
@@ -77,6 +89,17 @@ halo:
 ### 11. 你的项目中对接了 ChatGPT 和 ChatGLM 两个模型，那么使用了什么设计模式？
 
 关于多个模型服务，在项目中定义了一个通信渠道策略接口，接口方法返回统一的格式数据。多款 OpenAI 服务分别实现自己的接口处理。之后多个实现的策略模式注入到 Map 中，Key 是一个枚举值。当服务器选择不同的模型进行问答时，就会根据模型的枚举值，从中选择对应的策略处理类。这样也方便了后续更多模型的拓展。
+
+**补充**：对话的历史上下文数据你是怎么传过去的？怎么界定传多少消息过去呢？如果传的消息内容太多超过大模型记忆窗口会发生什么呢？你对话的历史数据是存到哪的，有什么办法提高查询效率吗？
+
+**答**：
+1.目前是不保留用户信息的，通过前端浏览器存储，后面携带历史记录进行消息传递（有最大上限条数为5，整体性能可以）。
+2.如果需要动态调整的话，可以考虑计算每条消息占用的 token 数量，控制传递消息的总 token 数不超过模型的窗口大小，比如 GPT3.5，限制 token 为 16385 ，那我们要确保消息不会超出这个值。
+如果消息的内容太多的话，可以考虑对旧的数据进行摘要处理，减少总 token 数量。
+3.如果超出模型的 token 窗口大小，超出的部分会被截断，无法被模型处理。可能导致模型无法理解上下文，影响答复的质量。
+4.**分批处理**：历史数据较多，采用分批次传递。**提示用户**：告知用户历史对话数已超过 Context window 大小，旧的数据将被忽略掉 / 请开启新的对话来更好的体验。
+5.对话的历史数据如果要持久化的话，当用户活跃在某个对话窗口时，我们可以将对话信息以 Hash 的结构来存储在 Redis 中。当用户不活跃（离开界面）时，就异步的将数据存放到 MySQL 中进行持久化，然后将对话记录也同步到 ES 中来提高搜索性能。
+6.保底方案就是在总用户最不活跃的时间段，定时任务处理持久化消息。
 
 ### 12. 你在项目中有支付购买的次数，那么对应就会有额度扣减、账户的校验、还有模型的使用类型，这些是怎么实现的？
 
