更新面试内容

--- a/6. 面试/后端开发面试题手写笔记.md
+++ b/6. 面试/后端开发面试题手写笔记.md
@@ -1,3 +1,22 @@
+## Java 集合知识
+
+### HashMap的原理以及扩容机制
+
+>HashMap 是基于哈希表的数据结构，用于键值对存储。
+
+#### JDK1.8 前描述：
+
+1. HashMap 底层采用**数组和链表**结合在一起使用（**链表散列**）。
+2. 通过 key 的 hashCode 经过扰动函数处理后得到的 hash 值，通过 `(n-1) & hash`找到元素存储的位置。
+3. 如果目前位置元素存在的话，就要判断它们的 hash 值和 key 是否相同，相同就覆盖，不同就通过拉链法解决冲突。
+
+#### JDK1.8 后描述：
+
+>哈希冲突的处理方式出现了很大的变化。
+
+1. 当链表长度大于等于阈值（默认 8）。
+2. 如果当前数组长度 < 64，则会先进行扩容来减少哈希冲突。
+3. 如果数组长度 >= 64，则将链表转为红黑树，减少搜索时间。
 
 ## Java JVM 知识
 
