--- a/6. 面试/后端开发面试题手写笔记.md
+++ b/6. 面试/后端开发面试题手写笔记.md
@@ -18,6 +18,37 @@
 2. 如果当前数组长度 < 64，则会先进行扩容来减少哈希冲突。
 3. 如果数组长度 >= 64，则将链表转为红黑树，减少搜索时间。
 
+#### put方法流程
+
+1. 计算键对象的 hashCode() 方法来获取 hash 值。
+2. 根据 hash 值，通过 `hash & (n-1)`操作定位到哈希表的某个桶中。
+3. 处理哈希冲突，调整表的大小。
+4. 如果存在的话，返回先前与指定键关联的值，否则返回 null。
+### HashMap和HashTable的区别
+
+1. **是否线程安全**：HashMap 非线程安全，Hashtable 线程安全（内部方法采用 synchronized 修饰）。
+2. **效率**：由于线程安全问题，HashMap 效率比 Hashtable 高。
+3. **是否支持空值**：HashMap 可以存储 null 的 key 和 value，但 null 键只能存在一个。Hashtable 不允许空值存在，否则抛出`NullPointerException`。
+4. **初始容量和扩容容量不同**：Hashtable 默认大小为 11 ，扩容默认大小为原来的`2n + 1`，HashMap 默认为 16 ，扩容默认大小为原来的 `2n`。如果 HashMap 指定了大小，会扩充为 2 的幂次方。
+5. **底层数据结构**：见`### HashMap的原理以及扩容机制`，而 Hashtable 没有这样的结构。
+6. **哈希函数的实现**：Hashtable 直接使用键的 hashCode() 的值。
+
+### ArrayList和LinkedList的区别
+
+1. **是否保证线程安全：** 都不是线程安全的，需要外部同步。
+2. **底层数据结构：**
+	- **ArrayList：** 基于动态数组实现。数组在初始化时有固定的容量，当元素数量超过容量时，数组会自动扩容（通常是原容量的 1.5 倍）。
+	- **LinkedList：** 基于双向链表实现。每个元素（节点）包含一个数据值和指向前后节点的引用。
+3. **插入和删除的影响：**
+	- **ArrayList：** 在末尾插入或删除元素的时间复杂度为 O(1)。但是，在中间插入或删除元素需要移动后续元素，时间复杂度为 O(n)。
+	- **LinkedList：** 在头尾插入或者删除元素的时间复杂度为 O(1)，因为只需调整前后节点的引用。但在指定位置时，需要先找到插入或删除的位置，时间复杂度为 O(n)。
+4. **快速随机访问：**
+	- **ArrayList：** 支持快速随机访问，因为底层是数组（实现了 `RandomAccess` 接口），可以直接通过索引访问元素。
+	- **LinkedList：** 不支持快速随机访问。需要遍历链表来访问元素。
+5. **内存空间占用:**
+	- **ArrayList：** 在列表的结尾会预留一定的容量空间，会导致一定量的内存浪费。
+	- **LinkedList：** 每个元素（节点）都需要额外的空间来存储指向前后节点的引用。
+	- **总结：** 因此，`LinkedList` 的每个元素比 `ArrayList` 的元素占用更多的内存。
 ## Java JVM 知识
 
 ### Java内存区域
