--- a/6. 面试/后端开发面试题手写笔记.md
+++ b/6. 面试/后端开发面试题手写笔记.md
@@ -1,3 +1,27 @@
+## Java 基础知识
+
+### 什么是序列化?什么是反序列化?
+
+如果我们需要持久化 Java 对象比如将 Java 对象保存在文件中，或者在网络传输 Java 对象，这些场景都需要用到序列化。
+
+- **序列化**：将数据结构或对象转换成可以存储或传输的形式，通常是二进制字节流，也可以是 JSON, XML 等文本格式。
+- **反序列化**：将在序列化过程中所生成的数据转换为原始数据结构或者对象的过程。
+
+###  Java 中 3 种常见 IO 模型
+
+1. **BIO 阻塞 IO（Blocking IO）**：
+    
+    - 这是最传统的 IO 模型。在这种模式下，读取或写入操作会一直阻塞，直到数据完全准备好。这意味着线程会被挂起，直到操作完成。
+    - 使用简单，但效率较低，因为线程在等待时不能执行其他任务。
+2. **NIO 非阻塞 IO（Non-blocking IO）**：
+    
+    - 在非阻塞 IO 中，线程可以在数据未准备好时立即返回，而不是被阻塞。线程可以继续执行其他操作，并在稍后再次尝试读取或写入。
+    - 这种模型通常需要通过轮询（polling）来检查数据是否准备好，可能会导致 CPU 消耗增加。
+3. **多路复用 IO（IO Multiplexing）**：
+    
+    - 这种模型使用选择器（Selector）来监视多个通道（Channel）的 IO 状态。线程可以等待选择器通知某个通道准备好进行 IO 操作。
+    - Java 中的 NIO（New IO）库提供了 `Selector` 类来实现多路复用 IO。它允许一个线程处理多个连接，提高了资源利用效率。
+
 ## Java 集合知识
 
 ### HashMap的原理以及扩容机制
@@ -821,3 +845,86 @@ volumes: # 定义持久化数据卷
 networks: # 定义网络
   app_network: # 自定义网络，用于连接多个服务
 ```
+
+
+## 介绍一下使用的设计模式，设计模式好处
+
+Java中常用的设计模式可以分为三大类：创建型模式、结构型模式和行为型模式。
+
+### 创建型模式
+
+1. **单例模式（Singleton）**
+   - **用途**：确保一个类只有一个实例，并提供全局访问点。
+   - **好处**：节省资源，控制实例化。
+
+2. **工厂模式（Factory Method）**
+   - **用途**：定义一个接口用于创建对象，但让子类决定实例化哪个类。
+   - **好处**：提高代码的灵活性和可扩展性。
+
+3. **抽象工厂模式（Abstract Factory）**
+   - **用途**：提供一个接口，用于创建相关或依赖对象的家族，而无需指定具体类。
+   - **好处**：易于交换产品系列，符合开闭原则。
+
+4. **建造者模式（Builder）**
+   - **用途**：分离对象的构建和表示，使得同样的构建过程可以创建不同的表示。
+   - **好处**：简化复杂对象的创建。
+
+5. **原型模式（Prototype）**
+   - **用途**：通过复制现有实例来创建对象。
+   - **好处**：减少创建对象的开销。
+
+### 结构型模式
+
+1. **适配器模式（Adapter）**
+   - **用途**：将一个类的接口转换成客户希望的另一个接口。
+   - **好处**：提高类的兼容性和复用性。
+
+2. **装饰者模式（Decorator）**
+   - **用途**：动态地给对象添加功能。
+   - **好处**：比继承更灵活。
+
+3. **代理模式（Proxy）**
+   - **用途**：为其他对象提供代理，以控制对该对象的访问。
+   - **好处**：控制对象的访问，减少内存占用。
+
+4. **外观模式（Facade）**
+   - **用途**：为子系统中的一组接口提供一个一致的界面。
+   - **好处**：简化客户端与复杂系统的交互。
+
+5. **桥接模式（Bridge）**
+   - **用途**：将抽象部分与实现部分分离，使它们可以独立变化。
+   - **好处**：提高系统的可扩展性。
+
+6. **组合模式（Composite）**
+   - **用途**：将对象组合成树形结构以表示“部分-整体”层次结构。
+   - **好处**：统一对待组合对象和单个对象。
+
+### 行为型模式
+
+1. **观察者模式（Observer）**
+   - **用途**：定义对象间的一对多依赖，当一个对象改变状态时，所有依赖者都会收到通知。
+   - **好处**：实现对象之间的松耦合。
+
+2. **策略模式（Strategy）**
+   - **用途**：定义一系列算法，将每个算法封装起来，并使它们可以互换。
+   - **好处**：消除算法的条件选择语句。
+
+3. **命令模式（Command）**
+   - **用途**：将请求封装为对象，从而使你可用不同的请求对客户端进行参数化。
+   - **好处**：支持撤销和重做操作。
+
+4. **状态模式（State）**
+   - **用途**：允许对象在内部状态改变时改变其行为。
+   - **好处**：使状态转换显式化，简化复杂状态机。
+
+5. **责任链模式（Chain of Responsibility）**
+   - **用途**：为请求创建一个接收者对象的链。
+   - **好处**：降低请求的发送者和接收者之间的耦合。
+
+### 设计模式的好处
+
+- **提高代码复用性**：通过使用模式，代码可以更容易地在不同项目中复用。
+- **提高代码可维护性**：模式提供了清晰的设计结构，便于理解和维护。
+- **增强系统的可扩展性**：设计模式使系统更容易扩展和修改。
+- **减少代码复杂性**：通过使用模式，可以减少代码中的重复和复杂性。
+- **促进团队协作**：设计模式提供了一种通用的设计语言，使团队成员之间的沟通更加顺畅。
