--- a/6. 面试/热点中间件面试题（快速复习）.md
+++ b/6. 面试/热点中间件面试题（快速复习）.md
@@ -500,7 +500,7 @@ RocketMQ支持顺序消息。在生产者端，消息可以按照顺序发送到
 
 2. **异步处理**：
 
-   - 异步处理可以显著提高消息处理的效率。生产者和消费者都可以采用异步发送和接收消息的方式，避免同步等待。这样可以充分利用系统资源，提高并发处理能力。
+   - 异步处理可以显著提高消息处理的效率。生产者和消费者都可以采用异步发送和接收消息的方式，避免同步等待。
 
 3. **批量处理**：
 
@@ -508,11 +508,11 @@ RocketMQ支持顺序消息。在生产者端，消息可以按照顺序发送到
 
 4. **持久化优化**：
 
-   - 消息的持久化操作会影响系统性能。采用高效的存储引擎和优化I/O操作可以提高持久化性能。Kafka使用顺序写入日志文件和零拷贝技术，显著提升了持久化性能。
+   - 消息的持久化操作会影响系统性能。采用高效的存储引擎和优化I/O操作可以提高持久化性能。例如，Kafka使用顺序写入日志文件和零拷贝技术。
 
 5. **内存缓存**：
 
-   - 通过使用内存缓存，可以减少对磁盘I/O的依赖，提高消息处理速度。消息可以先写入内存缓存，之后再异步写入磁盘。Redis等基于内存的消息队列可以提供高吞吐量和低延迟。
+   - 通过使用内存缓存，可以减少对磁盘I/O的依赖，提高消息处理速度。消息可以先写入内存缓存，之后再异步写入磁盘。例如，Redis基于内存的消息队列。
 
 6. **水平扩展**：
 
