--- a/学习笔记/日常/面试题整合.md
+++ b/学习笔记/日常/面试题整合.md
@@ -255,3 +255,18 @@
 链接：[https://www.nowcoder.com/feed/main/detail/d2a12f2c70db4b7ebf5d48785f696ed6](https://www.nowcoder.com/feed/main/detail/d2a12f2c70db4b7ebf5d48785f696ed6)  
 来源：牛客网
 
+### 用友一面
+
+HashMap的底层原理，是如何存储的，JDK8前后的区别？
+你觉得hashmap为什么要用红黑树而不用b+树或者说二叉搜索树？ 
+hashmap的扩容了解吗？把ArrayList的扩容机制说一下？ 
+ConcurrentHashMap的JDK8前后区别？ 
+用了Redis哪些底层数据结构？你在项目中如何使用的？ 
+ThreadLocal内存泄露了解吗？
+你用的线程池，核心参数说一下，你的参数是根据什么设置的呢？
+你常用的线程池是JAVA自带的还是自定义的？
+你的项目是IO密集型还是CPU密集型？
+线程池的拒绝策略说一下有什么？ 
+用过什么复杂的SQL吗？ 
+我看你透视业务系统用了redis做消息订阅，请问为什么不用MQ？ 
+我看你项目写了DDD，能不能介绍一下？
