--- a/学习笔记/日常/投递一览.md
+++ b/学习笔记/日常/投递一览.md
@@ -15,10 +15,10 @@
 14. 9.13 神州信息 10.99笔试
 15. 9.18 平安科技管培生
 16. 9.25 虎牙 10.16一面
-17. 10.8 浙江保融科技股份有限公司
+17. 10.8 浙江保融科技股份有限公司 11.1结束招聘了
 18. 10.10 小天才Web后台 10.16挂
 19. 10.11 中国一东盟信息港
 20. 10.14 深圳方正微电子
-22. 10.17 中山志翔电子科技（校内招聘） 10.22 一面
+22. 10.17 中山志翔电子科技 10.22 一面 10.23offer 拒了
 23. 10.21 百融云创
 24. 10.22 睿联
