--- a/6. 面试/动态线程池面试题.md
+++ b/6. 面试/动态线程池面试题.md
@@ -1,4 +1,6 @@
 
+1. 理论依据、2. 方案调研、3. 成熟案例、4. 符合诉求
+
 ## 介绍一下你的项目
 
 在学习京东、美团等大厂的动态线程池场景方案后，我了解到在实际工作中，线程池的使用场景非常广泛。然而，线程池参数难以一次性配置到位，同时需要进行监控以了解线程的消耗情况。为了解决这些问题，我设计并实现了一个动态线程池组件SDK ，旨在简化多个项目中线程池的管理和监控。
@@ -6,18 +8,25 @@
 ## 动态线程池常用用途和注意事项
 
 1. 一般我们的常用用途是一个新的服务上线，尤其是大量规则过线程池的。这个时候要进行上线后的压测，压测过程中要不断地调整和检测线程池的消耗变化，得到一个可以让响应时间和机器负载达到适配的程度。调试完得到一个值后可以配置到系统使用。另外是一些大促场景、或者临时有流量进来的场景，可以适当调整线程池大小。 
-2. 更新的时候，要注意服务器资源消耗【这些也都是有监控的】，如；CPU和内存。过多线程可能导致资源争用，降低整体性能。还需要检查任务队列的容量和处理能力。队列过长可能影响响应时间，而过短可能导致资源浪费。
+
+1. 更新的时候，要注意服务器资源消耗【这些也都是有监控的】，如；CPU和内存。过多线程可能导致资源争用，降低整体性能。还需要检查任务队列的容量和处理能力。队列过长可能影响响应时间，而过短可能导致资源浪费。
 
 ## 如何提供除了Redis以外的其它注册中心
 
 
 - **场景**：`@Qualifier` 注解可以指定要注入哪个名字的对象。之后 `@ConditionalOnProperty` 注解可以通过配置的 enabled 值，来确定是否实例化对象。
-- **用途**：这个场景是非常使用的，比如你做了一个组件，或者业务中要增加一些配置。启动或关闭某些服务，就可以使用了。而不需要把 pom 中引入的组件注释掉
+- **用途**：这个场景是非常实用的，比如你做了一个组件，或者业务中要增加一些配置。启动或关闭某些服务，就可以使用了。而不需要把 pom 中引入的组件注释掉
 
 ## 一个项目中的线程池建议共用一个线程池吗
 
 大部分时候都是配置一个统一的线程池，如果是有很多线程池场景在一个项目里，处理的流程又都不同，得考虑配置多个线程池，管理不同的场景。
 
-## 当核心和最大线程池参数为5时，已经打满了，这时候我设置成3，会有什么影响
+**如任务性质不同时**：
+- 如果任务的执行时间、优先级、或资源需求差异很大，可能需要不同的线程池。例如，短暂的轻量级任务和长时间的计算密集型任务可以使用不同的线程池。
 
-剩下两个任务有两种可能，①正在执行，他们会继续执行，当执行完了才会判断一下核心线程数和最大线程数。②不在执行，还在队列中，那没有任何影响。
+## 当核心和最大线程池参数为5时，已经打满了，这时候我设置成3，会有什么影响？
+
+剩下两个任务有两种可能：
+
+1. 正在执行，他们会继续执行，当执行完了才会判断一下核心线程数和最大线程数。
+2. 不在执行，还在队列中，那没有任何影响。
