--- a/6. 面试/个人回答.md
+++ b/6. 面试/个人回答.md
@@ -5,7 +5,7 @@
 
 在大学期间，我通过自己的努力获得了各种奖学金，并参与过多次校内外竞赛，都取得了不错的成绩。我熟悉使用各类开发技术及其相关框架，积累了许多开发经验。同时，我对技术有着浓厚的兴趣，长期学习各种新的技术，阅读技术文档，不断吸收各种新的技术知识。尤其是在学习领域驱动DDD设计思想后，我首先开发了一款内部可用的OpenAI应用服务项目，并将其部署上线，使我在技术和个人成长方面都得到了极大的提升。
 
-通过持续不断的学习和实践，并在自己个人博客上记录学习心得和技巧，我已经建立了良好的技术基础和开发习惯。未来，我希望能够在贵公司继续发挥所学，进一步拓展我的技能，为团队贡献力量。同时，我也期待在工作中继续学习和成长，为公司的发展助力。谢谢！
+通过持续不断的学习和实践，我也会在自己个人博客上记录学习心得，我已经建立了良好的技术基础和开发习惯。未来，我希望能够在贵公司继续发挥所学，进一步拓展我的技能，为团队贡献力量。同时，我也期待在工作中继续学习和成长，为公司的发展助力。谢谢！
 
 ## 反问
 
