--- a/6. 面试/个人回答.md
+++ b/6. 面试/个人回答.md
@@ -36,12 +36,16 @@
 
 ### 回答职业规划：
 
-大概就是不好高骛远努力熟悉某某开发业务利用现有能力努力干好本职工作，同时不断学习新知识寻求个人能力上的突破从而为公司创造更大的价值。
+大概就是不好高骛远
+
+努力熟悉某某开发业务利用现有能力努力干好本职工作，同时不断学习新知识寻求个人能力上的突破从而为公司创造更大的价值。
 
 ### 回答遇到工作困难：
 
 1、我认为工作中遇到挑战是成长和发展的好机会。当我面临挑战时，我首先会冷静下来，全面地分析问题的本质及其背后的原因。  
+
 2、我会根据具体情况制定一个实际可行的行动计划，并寻求团队成员的意见或帮助。在执行过程中，我会保持灵活性，随时调整策略以应对新的情况。  
+
 3、一旦问题得到解决，我还会花时间回顾整个过程，思考哪些做得好，哪些需要改进，以便在未来遇到类似情况时能更有效地应对。  
 
 
