--- a/6. 面试/后端开发面试题手写笔记.md
+++ b/6. 面试/后端开发面试题手写笔记.md
@@ -706,12 +706,45 @@ public class SecondAspect implements Ordered {
 ```
 
 ### Spring MVC的核心组件
+#### 1. 请求处理流程
 
-1. `DispatcherServlet`：核心中央处理器，负责接收请求、分发，给予客户端响应。
-2. `HandlerMapping`：处理器映射，根据 URL 去匹配查找能处理的 `Handler`，并将会涉及到的拦截器和`Handler`一起封装。
-3. `HandlerAdapter`：处理器适配器，根据`HandlerMapping`找到的`Handler`，适配执行对应的`Handler`。
-4. `Handler`：请求处理器，处理实际请求的处理器。
-5. `ViewResolver`：视图解析器，根据`Handler`返回的逻辑视图，解析并渲染真正的视图，并传递给`DispatcherServlet`响应客户端。
+- **用户请求**：用户通过浏览器向服务器发送 HTTP 请求。
+- **前端控制器**：所有请求首先被 DispatcherServlet 接收。DispatcherServlet 是 Spring MVC 的核心组件，负责将请求转发到相应的处理器（Controller）。
+- **处理映射**：DispatcherServlet 根据请求的 URL 查找对应的 HandlerMapping，找到合适的 Controller。
+- **控制器处理**：找到 Controller 后，DispatcherServlet 调用该 Controller 的处理方法。Controller 处理业务逻辑，并返回一个 ModelAndView 对象，其中包含模型数据和视图信息。
+
+#### 2. 视图解析
+
+- **视图解析**：DispatcherServlet 接收到 ModelAndView 后，会使用 ViewResolver 根据视图名称找到对应的视图实现（如 JSP、Thymeleaf 等）。
+- **渲染视图**：将模型数据填充到视图中，生成最终的 HTML 内容。
+
+#### 3. 响应返回
+
+- **响应输出**：生成的 HTML 内容通过 DispatcherServlet 返回给用户的浏览器，完成一次请求的处理。
+
+#### 4. 组件结构
+
+- **Controller**：处理用户请求和业务逻辑。
+- **Model**：封装数据，通常是 Java 对象。
+- **View**：用户界面，负责展示数据，通常是 JSP、HTML、Thymeleaf 等。
+- **DispatcherServlet**：前端控制器，负责请求的分发和响应的处理。
+- **HandlerMapping**：将请求映射到具体的 Controller。
+- **ViewResolver**：将视图名称解析为实际的视图实现。
+
+#### 5. 注解驱动的配置
+
+Spring MVC 还支持注解驱动的配置，例如：
+
+- `@Controller`：将一个类标记为控制器。
+- `@RequestMapping`：用于映射请求到处理方法。
+- `@GetMapping`、`@PostMapping`：简化常用的 HTTP 方法映射。
+- `@ResponseBody`：将返回值直接写入 HTTP 响应体。
+
+### 了解SpringCloud吗，说一下他和SpringBoot的区别
+
+Spring Boot是用于构建单个Spring应用的框架，而Spring Cloud则是用于构建分布式系统中的微服务架构的工具，Spring Cloud提供了服务注册与发现、负载均衡、断路器、网关等功能。
+
+两者可以结合使用，通过Spring Boot构建微服务应用，然后用Spring Cloud来实现微服务架构中的各种功能。
 
 ## Mybatis 知识
 
@@ -783,6 +816,43 @@ public class SecondAspect implements Ordered {
 
 - **实现事务的持久性，让 MySQL 有 crash-safe 的能力**，能够保证 MySQL 在任何时间段突然崩溃，重启后之前已提交的记录都不会丢失；
 - **将写操作从「随机写」变成了「顺序写」**，提升 MySQL 写入磁盘的性能。
+
+### mysql的explain有什么作用？
+
+explain 是查看 sql 的执行计划，主要用来分析 sql 语句的执行过程，比如有没有走索引，有没有外部排序，有没有索引覆盖等等。
+
+对于执行计划，参数有：
+
+- possible_keys 字段表示可能用到的索引；
+- key 字段表示实际用的索引，如果这一项为 NULL，说明没有使用索引；
+- key_len 表示索引的长度；
+- rows 表示扫描的数据行数。
+- type 表示数据扫描类型，我们需要重点看这个。
+
+type 字段就是描述了找到所需数据时使用的扫描方式是什么，常见扫描类型的**执行效率从低到高的顺序为**：
+
+- All（全表扫描）：在这些情况里，all 是最坏的情况，因为采用了全表扫描的方式。
+- index（全索引扫描）：index 和 all 差不多，只不过 index 对索引表进行全扫描，这样做的好处是不再需要对数据进行排序，但是开销依然很大。所以，要尽量避免全表扫描和全索引扫描。
+- range（索引范围扫描）：range 表示采用了索引范围扫描，一般在 where 子句中使用 < 、>、in、between 等关键词，只检索给定范围的行，属于范围查找。**从这一级别开始，索引的作用会越来越明显，因此我们需要尽量让 SQL 查询可以使用到 range 这一级别及以上的 type 访问方式**。
+- ref（非唯一索引扫描）：ref 类型表示采用了非唯一索引，或者是唯一索引的非唯一性前缀，返回数据返回可能是多条。因为虽然使用了索引，但该索引列的值并不唯一，有重复。这样即使使用索引快速查找到了第一条数据，仍然不能停止，要进行目标值附近的小范围扫描。但它的好处是它并不需要扫全表，因为索引是有序的，即便有重复值，也是在一个非常小的范围内扫描。
+- eq_ref（唯一索引扫描）：eq_ref 类型是使用主键或唯一索引时产生的访问方式，通常使用在多表联查中。比如，对两张表进行联查，关联条件是两张表的 user_id 相等，且 user_id 是唯一索引，那么使用 EXPLAIN 进行执行计划查看的时候，type 就会显示 eq_ref。
+- const（结果只有一条的主键或唯一索引扫描）：const 类型表示使用了主键或者唯一索引与常量值进行比较，比如 select name from product where id=1。需要说明的是 const 类型和 eq_ref 都使用了主键或唯一索引，不过这两个类型有所区别，**const 是与常量进行比较，查询效率会更快，而 eq_ref 通常用于多表联查中**。
+
+extra 显示的结果，这里说几个重要的参考指标：
+
+- Using filesort ：当查询语句中包含 group by 操作，而且无法利用索引完成排序操作的时候， 这时不得不选择相应的排序算法进行，甚至可能会通过文件排序，效率是很低的，所以要避免这种问题的出现。
+- Using temporary：使了用临时表保存中间结果，MySQL 在对查询结果排序时使用临时表，常见于排序 order by 和分组查询 group by。效率低，要避免这种问题的出现。
+- Using index：所需数据只需在索引即可全部获得，不须要再到表中取数据，也就是使用了覆盖索引，避免了回表操作，效率不错。
+
+### 给你张表，发现查询速度很慢，你有那些解决方案
+
+- **分析查询语句**：使用EXPLAIN命令分析SQL执行计划，找出慢查询的原因，比如是否使用了全表扫描，是否存在索引未被利用的情况等，并根据相应情况对索引进行适当修改。
+- **创建或优化索引**：根据查询条件创建合适的索引，特别是经常用于WHERE子句的字段、Orderby 排序的字段、Join 连表查询的字典、 group by的字段，并且如果查询中经常涉及多个字段，考虑创建联合索引，使用联合索引要符合最左匹配原则，不然会索引失效
+- **避免索引失效：**比如不要用左模糊匹配、函数计算、表达式计算等等。
+- **查询优化**：避免使用SELECT *，只查询真正需要的列；使用覆盖索引，即索引包含所有查询的字段；联表查询最好要以小表驱动大表，并且被驱动表的字段要有索引，当然最好通过冗余字段的设计，避免联表查询。
+- **分页优化：**针对 limit n,y 深分页的查询优化，可以把Limit查询转换成某个位置的查询：select * from tb_sku where id>20000 limit 10，该方案适用于主键自增的表，
+- **优化数据库表**：如果单表的数据超过了千万级别，考虑是否需要将大表拆分为小表，减轻单个表的查询压力。也可以将字段多的表分解成多个表，有些字段使用频率高，有些低，数据量大时，会由于使用频率低的存在而变慢，可以考虑分开。
+- **使用缓存技术**：引入缓存层，如Redis，存储热点数据和频繁查询的结果，但是要考虑缓存一致性的问题，对于读请求会选择旁路缓存策略，对于写请求会选择先更新 db，再删除缓存的策略。
 
 ## Docker 知识
 
